[metadata]
author = Vytautas Liuolia
author_email = vytautas.liuolia@gmail.com
description = Middleware for integrating Falcon applications with SQLAlchemy.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/vytas7/falcon-sqla
project_urls =
    Documentation = https://falcon-sqla.readthedocs.io
    GitHub: issues = https://github.com/vytas7/falcon-sqla/issues
    Chat: Gitter = https://gitter.im/falconry/user
licence = Apache 2
licence_file = LICENCE
keywords =
    falcon
    wsgi
    database
    middleware
    orm
    sqlalchemy
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Database :: Front-Ends
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find_namespace:
python_requires = >=3.6
install_requires =
    falcon >= 2.0.0
    SQLAlchemy >= 1.3.0

[options.packages.find]
exclude =
    build*
    dist*
    docs*
    tests*

[options.extras_require]
docs =
    Sphinx >= 3.1.0
    sphinx-rtd-theme >= 0.5.0

test =
    pytest
    pytest-cov
